Fix: price_wrap 수정

--- a/layout/basic/css/common.css
+++ b/layout/basic/css/common.css
@@ -316,17 +316,17 @@ div.layerProgress {
     display: flex;
     flex-flow: row nowrap;
 }
-.price_wrap>li{
-    font-size: 1.48rem;
-    font-weight: 600;
-    color: #022cff;
+.price_wrap>li,.price_wrap>li>span{
+    font-size: 1.48rem !important;
+    font-weight: 600 !important;
+    color: #022cff !important;
 }
 .pricenonsale{
-    text-decoration: line-through;
+    text-decoration: line-through !important;
     color: #ABABAB !important;
     font-size :
-    1.3rem;
-    margin-left: 8px;
+    1.3rem !important;
+    margin-left: 8px !important;
 }
 .pricenonsale>.wontag{
     color: #ABABAB !important;
